gcc/testsuite/rust/rustc/ui/parser/empty-impl-semicolon.rs
struct Foo;
impl Foo; // { dg-error "" "" { target *-*-* } }

fn main() {}

